k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
matadata:
  name: app
---
apiVersion: v1
kind: Namespace
metadata: 
  name: observability
